# pycounts

./: CHANGELOG.md  LICENSE  README.md  Untitled.ipynb  pyproject.toml
docs/: conf.py
