[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "bluecrest haoting cui"
authors = ["Max Kang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
